--- a/bestbid/bidding/templates/bidding/about.html
+++ b/bestbid/bidding/templates/bidding/about.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="UTF-8">
 		{% block title %}
-			<title>Index | BestBid.com</title>
+			<title>About Us | BestBid.com</title>
 		{% endblock %}
 	</head>
 
@@ -18,17 +18,25 @@
 					<br>
 					<h1 style="text-align: center;">About Us</h1>
 					<br>
+					<h3 style="text-align: center;">BestBid.com</h3>
 
-					Welcome to Bestbid, your number one source for all things [product]. We're dedicated to giving you the very best of [product], with a focus on [store characteristic 1], [store characteristic 2], [store characteristic 3].
+					<p>
+						Welcome to Bestbid, your number one source for all things. We're dedicated to giving you the very best of auctioning, with a focus on the Best Price, privacy.
+					</p>
+					<p>
+						Founded in 2019 by <b>Aarsh Sheth, Zarmy Patel and Sneha Malla</b>. 
+					</p>
+					<p>
+						Bestbid has come a long way from its beginnings in <b>Nadiad</b>. When [founder name] first started out, [his/her/their] passion for [brand message - e.g. "eco-friendly cleaning products"] drove them to [action: quit day job, do tons of research, etc.] so that Bestbid can offer you [competitive differentiator - e.g. "the world's most advanced toothbrush"]. We now serve customers all over [place - town, country, the world], and are thrilled that we're able to turn our passion into [my/our] own website.
 
-					Founded in [year] by [founder name], Bestbid has come a long way from its beginnings in [starting location]. When [founder name] first started out, [his/her/their] passion for [brand message - e.g. "eco-friendly cleaning products"] drove them to [action: quit day job, do tons of research, etc.] so that Bestbid can offer you [competitive differentiator - e.g. "the world's most advanced toothbrush"]. We now serve customers all over [place - town, country, the world], and are thrilled that we're able to turn our passion into [my/our] own website.
+						[I/we] hope you enjoy [my/our] products as much as [I/we] enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact [me/us].
 
-					[I/we] hope you enjoy [my/our] products as much as [I/we] enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact [me/us].
+						Sincerely,
 
-					Sincerely,
-
-					[founder name]
+						[founder name]
+					</p>
 				</div>
+				<br><br><br><br><br><br>
 			{% endblock %}
 		</main>
 	</body>
