--- a/bestbid/bidding/templates/bidding/change_password.html
+++ b/bestbid/bidding/templates/bidding/change_password.html
@@ -30,7 +30,7 @@
 							</div>
 							<div class="form-group" id="pwdcheck1">
 								<label for="pwd1">New Password</label>
-								<input type="password" class="form-control" id="pwd1" name="pwd1" placeholder="Create New Password" autocapitalize="false" autocomplete="false" autocorrect="false">
+								<input type="password" class="form-control" id="pwd1" name="pwd1" placeholder="Create New Password" autocapitalize="false" autocomplete="false" autocorrect="false" onkeyup="checkPassword()">
 								<div class="custom-control custom-switch">
 									<input type="checkbox" class="custom-control-input" id="customSwitch1" onclick="toggle_pass()">
 									<label class="custom-control-label" for="customSwitch1">Show Password</label>
