--- a/bestbid/bidding/templates/bidding/footer.html
+++ b/bestbid/bidding/templates/bidding/footer.html
@@ -12,7 +12,7 @@
 			<div class="col-md-4 mx-auto">
 
 				<!-- Links -->
-				<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Developed By</h5>
+				<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Designed & Developed By</h5>
 				<ul class="list-unstyled">
 					<li>
 						<a href="#">Aarsh Sheth</a>
@@ -83,7 +83,7 @@
 
 	</div>
 	<!-- Footer Links -->
-
+	<hr>
 	<!-- Copyright -->
 	<div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
 		<a href="http://127.0.0.1:8000/index/"> BestBid.com</a> | Designed and Developed by : Aarsh Sheth, Zarmy Patel, Sneha Malla
