--- a/bestbid/bidding/templates/bidding/forgot_password.html
+++ b/bestbid/bidding/templates/bidding/forgot_password.html
@@ -21,15 +21,16 @@
 					<br>
 					<h2 style="text-align: center;">Verify OTP</h2>
 					<br>
-					<form action="{% url 'reset_password' %}" method="POST">
+					<form action="{% url 'reset_password' 'check_otp' %}" method="POST">
 						{% csrf_token %}
 						<fieldset>	
 								<div class="form-group">
-									<label for="otp">One Time Password</label>
-									<input type="text" class="form-control" id="otp" name="otp" placeholder="OTP" autocapitalize="false" autocomplete="false" autocorrect="false" required>
+									<label for="check_otp">One Time Password</label>
+									<input type="text" class="form-control" id="check_otp" name="check_otp" placeholder="OTP" autocapitalize="false" autocomplete="false" autocorrect="false" required>
 								</div>
-								<input type="hidden" name="user_id" value="{{ request.session.id }}">
-								<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
+								<!-- <input type="hidden" name="user_type" value="{{ request.POST.user_type }}">
+								<input type="hidden" name="user_email" value="{{ request.POST.user_email }}"> -->
+								<input type="hidden" name="verify_otp" value="verify_otp">
 								<input type="hidden" name="verify_otp" value="verify_otp">
 								<button class="btn btn-primary" id="update_btn">Verify OTP</button>	
 						</fieldset>
