--- a/bestbid/bidding/templates/bidding/reset_password.html
+++ b/bestbid/bidding/templates/bidding/reset_password.html
@@ -26,7 +26,7 @@
 						<fieldset>								
 							<div class="form-group" id="pwdcheck1">
 								<label for="pwd1">New Password</label>
-								<input type="password" class="form-control" id="pwd1" name="pwd1" placeholder="Create New Password" autocapitalize="false" autocomplete="false" autocorrect="false">
+								<input type="password" class="form-control" id="pwd1" name="pwd1" placeholder="Create New Password" autocapitalize="false" autocomplete="false" autocorrect="false" onkeyup="checkPassword()">
 								<div class="custom-control custom-switch">
 									<input type="checkbox" class="custom-control-input" id="customSwitch1" onclick="toggle_pass()">
 									<label class="custom-control-label" for="customSwitch1">Show Password</label>
@@ -45,8 +45,8 @@
 								</div>
 							</div>
 
-							<input type="hidden" name="user_id" value="{{ request.session.id }}">
-							<input type="hidden" name="user_type" value="{{ request.session.user_type }}">
+							<!-- <input type="hidden" name="user_email" value="{{ request.ses.user_email }}">
+							<input type="hidden" name="user_type" value="{{ request.session.user_type }}"> -->
 							<input type="hidden" name="reset" value="reset">
 							<button class="btn btn-primary" id="update_btn" disabled="true">Save Password</button>
 
