--- a/bestbid/bidding/templates/bidding/seller_login.html
+++ b/bestbid/bidding/templates/bidding/seller_login.html
@@ -27,14 +27,16 @@
 				<button type="submit" class="btn btn-info" data-toggle="modal" data-target="#forgot_password">Forgot Password</button>
 
 				<!-- Forgot Password Modal -->
+				{% comment %}
+
 				<div class="modal fade" id="forgot_password">
 					<div class="modal-dialog " role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-							<h5 class="modal-title">Forgot Password</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
+								<h5 class="modal-title">Forgot Password</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
 							</div>
 							<div class="modal-body">
 								<div class="form-group">
@@ -50,7 +52,7 @@
 								</div>
 							</div>
 							<div class="modal-footer">
-								<form action="{% url 'reset_password' %}" method="POST">
+								<form action="{% url 'test' %}" method="POST">
 									{% csrf_token %}
 									<input type="hidden" name="user_type" value="seller">
 									<input type="hidden" name="otp" value="otp">
@@ -58,6 +60,36 @@
 								</form>
 								<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 							</div>
+						</div>
+					</div>
+				</div>					
+				{% endcomment %}
+
+				<div class="modal fade" id="forgot_password">
+					<div class="modal-dialog " role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">Forgot Password</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<form action="{% url 'reset_password'%}" method="POST">
+								{% csrf_token %}
+								<div class="modal-body">
+									<div class="form-group">
+										<label for="forgot_email">Email</label>
+										<input type="email" class="form-control" id="forgot_email" name="forgot_email" placeholder="Email" required>
+										<small id="emailHelp" class="form-text text-muted">We'll send you an One-Time-Password (OTP) on your provided email address.</small>
+									</div>
+								</div>
+								<div class="modal-footer">
+									<input type="hidden" name="user_type" value="seller">
+									<input type="hidden" name="otp" value="otp">
+									<button class="btn btn-primary" autofocus>Send OTP</button>
+									<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
