--- a/bestbid/bidding/templates/bidding/upload.html
+++ b/bestbid/bidding/templates/bidding/upload.html
@@ -15,7 +15,7 @@
 			<div class="container w-50">
 				<main>
 					<br>
-					<h1 style="text-align: center;">Upload an Asset</h1>
+					<h1 style="text-align: center;">Upload Asset</h1>
 					<br>
 				
 					<form action="{% url 'upload' %}" method="POST" enctype="multipart/form-data">
